force-app/main/default/objects/Player__c/fields/BalanceDueFormula__c.field-meta.xml
<CustomField>
    <fullName>BalanceDueFormula__c</fullName>
    <formula>IF(  User__r.IsActive , Settings__r.EntryFee__c - TotalPaymentsRollup__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>