force-app/main/default/objects/Player__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Player nickname</description>
    <externalId>true</externalId>
    <inlineHelpText>Player nickname</inlineHelpText>
    <label>Nickname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>