force-app/main/default/objects/Player__c/fields/Settings__c.field-meta.xml
<CustomField>
    <fullName>Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settings</label>
    <referenceTo>Settings__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>