force-app/main/default/objects/Player__c/fields/Total_Points_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Available__c</fullName>
    <label>Total Points Available</label>
    <summarizedField>Weekly_Result__c.Total_Points_Available__c</summarizedField>
    <summaryForeignKey>Weekly_Result__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>