force-app/main/default/objects/Player__c/fields/TotalPaymentsRollup__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentsRollup__c</fullName>
    <label>Total Payments</label>
    <summarizedField>PlayerPayment__c.Amount__c</summarizedField>
    <summaryForeignKey>PlayerPayment__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>