force-app/main/default/objects/Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>User__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Win_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>